test-resources/invalid-project/src/main/java/test/group/id/LTRM.java
package test.group.id;

/**
 * ‎
 * Bidi characters above
 */
public class LTRM
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
